@@ -1,3 +1,9 @@
+* Version ?.?.?
+- Changed usage of STL to gain better compatibility with old GCC versions
+  (credits to Jeremy Chadwick for finding the relevant code)
+- Fixed typos in mod_suphp.c (Apache 1.3)
+  (credits to Johan Ekenberg for finding these typos)
+
 * Version 0.6.0 (27 May 2005)
 ++ The development of this version was sponsored by Techno-vi - Wanix. ++
 ++ Thanks to the sponsor!                                              ++
